# uFastAuthD

./: CMakeLists.txt  TODO.txt
etc/ufastauthd/: config.ini
rpm/: build.spec
src/: authstorageimpl.cpp  defs.h  loginauthmethods.cpp  loginauthmethods.h  loginrpcserverimpl.cpp  main.cpp  webserverimpl.cpp
var/www/: package-lock.json  package.json
var/www/ufastauthd/: README.txt  account-add.html  account-edit.html  accounts.html  application-edit.html  applications-add.html  applications.html  group-edit.html  groups-add.html  groups.html  login.html
var/www/ufastauthd/assets/hidden/: inc.accounts.header.html  inc.applications.header.html  inc.attributes.header.html  inc.groups.header.html  inc.main.footer.html  inc.main.header.html
var/www/ufastauthd2/: account-add.html  account-edit.html  accounts.html  application-edit.html  applications-add.html  applications.html  group-edit.html  groups-add.html  groups.html  login.html  secrets.html
var/www/ufastauthd2/assets/hidden/: inc.main.footer.html  inc.main.header.html
var/www/ufastauthd2/assets/hidden/changepwd/: inc.modal.changepwd.html
var/www/ufastauthd2/assets/js/: mantids_login.js
